tests/error/native_unsupported_string.vbc
int main() {
    string label = "native";
    return 0;
}

